// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentSticker should render when frequency type is batch 1`] = `
<div>
  <div
    class="card card-root card-root"
  >
    <div
      class="card-header align-items-center d-flex justify-content-between"
    >
      <div
        class="card-title"
      >
        Activations
      </div>
    </div>
    <div
      class="card-body"
    >
      <ul
        class="list-group show-quick-actions-on-hover"
      >
        <li
          class="px-2 list-group-item list-group-item-flex"
        >
          <div
            class="autofit-col autofit-col-expand"
          >
            <p
              class="list-group-title mb-2"
            >
              Liferay DXP
            </p>
            <p
              class="mb-2 list-group-text"
            >
              Syncs individual profiles to Liferay DXP to deliver personalization via pages, collections, A/B tests, and recommendations.
            </p>
            <span
              class="label align-self-start label-info"
            >
              <span
                class="label-item label-item-expand"
              >
                Batch sync will run indefinitely
              </span>
            </span>
          </div>
          <div
            class="autofit-col"
          >
            <div
              class="quick-action-menu"
            >
              <button
                aria-label="Edit"
                class="component-action quick-action-item"
                role="button"
                title="Edit"
              >
                <svg
                  class="lexicon-icon lexicon-icon-pencil"
                  role="presentation"
                >
                  <use
                    href="#pencil"
                  />
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`SegmentSticker should render when frequency type is real time 1`] = `
<div>
  <div
    class="card card-root card-root"
  >
    <div
      class="card-header align-items-center d-flex justify-content-between"
    >
      <div
        class="card-title"
      >
        Activations
      </div>
    </div>
    <div
      class="card-body"
    >
      <ul
        class="list-group show-quick-actions-on-hover"
      >
        <li
          class="px-2 list-group-item list-group-item-flex"
        >
          <div
            class="autofit-col autofit-col-expand"
          >
            <p
              class="list-group-title mb-2"
            >
              Liferay DXP
            </p>
            <p
              class="mb-2 list-group-text"
            >
              Syncs individual profiles to Liferay DXP to deliver personalization via pages, collections, A/B tests, and recommendations.
            </p>
            <span
              class="label align-self-start label-info"
            >
              <span
                class="label-item label-item-expand"
              >
                Real-Time sync will run indefinitely
              </span>
            </span>
          </div>
          <div
            class="autofit-col"
          >
            <div
              class="quick-action-menu"
            >
              <button
                aria-label="Edit"
                class="component-action quick-action-item"
                role="button"
                title="Edit"
              >
                <svg
                  class="lexicon-icon lexicon-icon-pencil"
                  role="presentation"
                >
                  <use
                    href="#pencil"
                  />
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`SegmentSticker should render with dates when frequency type is between 1`] = `
<div>
  <div
    class="card card-root card-root"
  >
    <div
      class="card-header align-items-center d-flex justify-content-between"
    >
      <div
        class="card-title"
      >
        Activations
      </div>
    </div>
    <div
      class="card-body"
    >
      <ul
        class="list-group show-quick-actions-on-hover"
      >
        <li
          class="px-2 list-group-item list-group-item-flex"
        >
          <div
            class="autofit-col autofit-col-expand"
          >
            <p
              class="list-group-title mb-2"
            >
              Liferay DXP
            </p>
            <p
              class="mb-2 list-group-text"
            >
              Syncs individual profiles to Liferay DXP to deliver personalization via pages, collections, A/B tests, and recommendations.
            </p>
            <span
              class="label align-self-start label-info"
            >
              <span
                class="label-item label-item-expand"
              >
                Batch sync will run from Aug 24, 2025 to Sep 14, 2025
              </span>
            </span>
          </div>
          <div
            class="autofit-col"
          >
            <div
              class="quick-action-menu"
            >
              <button
                aria-label="Edit"
                class="component-action quick-action-item"
                role="button"
                title="Edit"
              >
                <svg
                  class="lexicon-icon lexicon-icon-pencil"
                  role="presentation"
                >
                  <use
                    href="#pencil"
                  />
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
